# Pragent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_all.sh  stop_all.sh
backend/: main.py
backend/agents/: workflow.py
backend/api/: deps.py  responses.py  router.py  sse.py
backend/api/routes/: auth.py  conversations.py  dashboard.py  ingestion.py  intent_tree.py  knowledge.py  rag.py  sample_questions.py  settings.py  traces.py  users.py
backend/config/: database.py  logging.py  redis.py  settings.py
backend/ingestion/: chunker.py  parsers.py
backend/memory/: service.py
backend/models/: base.py  entities.py  schemas.py
backend/rag/: model_router.py  retrieval.py
backend/services/: auth.py  common.py  conversations.py  dashboard.py  ids.py  ingestion.py  intent_tree.py  knowledge.py  rag_chat.py  sample_questions.py  settings.py  traces.py  users.py
backend/tools/: storage.py
backend/vectorstore/: qdrant_store.py
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/pages/: LoginPage.tsx
frontend/src/pages/admin/: AdminLayout.tsx
frontend/src/pages/admin/intent-tree/: IntentTreePage.tsx
frontend/src/pages/admin/users/: UserListPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  chatStore.ts
frontend/src/styles/: globals.css
frontend/src/utils/: storage.ts
