[project]
name = "pragent-backend"
version = "0.1.0"
description = "Python backend for the Pragent-compatible AI Agent platform"
requires-python = ">=3.11"
dependencies = [
  "aioboto3>=13.1.1",
  "aiofiles>=24.1.0",
  "aiomysql>=0.2.0",
  "anthropic>=0.49.0",
  "cryptography>=46.0.0",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "langgraph>=0.3.21",
  "llama-index-core>=0.12.31",
  "llama-index-embeddings-openai>=0.3.1",
  "openai>=1.68.2",
  "pydantic-settings>=2.8.1",
  "pydantic[email]>=2.10.6",
  "pypdf>=5.4.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "qdrant-client>=1.13.3",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.39",
  "sse-starlette>=2.2.1",
  "structlog>=25.2.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.0"
]

[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
